fix: adjust loading mask timing for smoother user experience

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -378,16 +378,20 @@
               </tr>
               <tr
                 id="electricity-row"
-                style="background-color: #8e7f77; display: none"
+                style="background-color: #d3c4bc; display: none"
               >
                 <td>
                   <span class="label">電力需求 Electricity Requirement</span
                   ><br />
                   <span id="electricity-regulation">
                     請務必詳列設備名稱與瓦數，於右上角<span
-                      style="background-color: black; color: ghostwhite"
-                      >「編輯 Edit」</span
-                    >做修改<br />範例如下：<br />
+                      style="
+                        background-color: black;
+                        color: ghostwhite;
+                        padding: 1px;
+                      "
+                      >編輯 Edit</span
+                    >做修改，範例如下：<br />
                     微波爐：1100W<br />
                     電扇：65W<br />
                     熱水壺：1500W<br /><br />
