--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2268,12 +2268,22 @@
 
     <!-- 手機版要大家拔點草 -->
     <div id="grass-mask" style="display: none">
-  <div id="grass-tip" style="text-align:center; color:#222; font-size:1.2em; font-weight:bold; margin-top:2em;">
-    手機版還在整理中<br>Mobile version is under construction
-  </div>
-  <canvas id="grass-canvas"></canvas>
-  <div id="grass-progress"></div>
-</div>
+      <div
+        id="grass-tip"
+        style="
+          text-align: center;
+          color: #222;
+          font-size: 1.2em;
+          font-weight: bold;
+          margin-top: 2em;
+        "
+      >
+        手機版還在整理中<br />Mobile version is under construction<br />
+        請移步至桌機做使用<br />Please use desktop version<br />
+      </div>
+      <canvas id="grass-canvas"></canvas>
+      <div id="grass-progress"></div>
+    </div>
     <script src="js/dashboardupload/upload_dashboard.js"></script>
     <script src="js/dashboard-body.js"></script>
     <script src="js/oxox.js"></script>
