--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -35,11 +35,26 @@
     <script src="js/edit-profile.js"></script>
   </head>
   <body>
-    <!-- 草地遮罩 -->
+    <!-- 草-草=草 -->
     <div id="grass-mask" style="display: none">
+      <div id="grass-tip">
+        手機版還在整理中<br />Mobile version is under construction
+      </div>
       <canvas id="grass-canvas"></canvas>
-      <div id="grass-progress"></div>
+      <div
+        id="grass-cursor"
+        style="
+          display: none;
+          position: absolute;
+          z-index: 10;
+          font-size: 2.2em;
+          pointer-events: none;
+        "
+      >
+        🪒
+      </div>
     </div>
+    <!-- fake loading -->
     <div id="loading-mask" style="display: flex">
       <div class="loading-grid"></div>
       <div class="loading-percent" id="loading-percent">0%</div>
