--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -38,7 +38,7 @@
     <!-- 草-草=草 -->
     <div id="grass-mask" style="display: none">
       <div id="grass-tip">
-        手機版還在整理中<br />Mobile version is under construction
+        手機版現在不能用<br />Mobile version is under construction
       </div>
       <canvas id="grass-canvas"></canvas>
       <div
@@ -47,7 +47,7 @@
           display: none;
           position: absolute;
           z-index: 10;
-          font-size: 2.2em;
+          font-size: 4em;
           pointer-events: none;
         "
       >
