--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -37,8 +37,11 @@
   <body>
     <!-- 草-草=草 -->
     <div id="grass-mask" style="display: none">
-      <div id="grass-tip">
-        手機版現在不能用<br />Mobile version is under construction
+      <div
+        id="grass-tip"
+        style="margin-top: 1em; text-align: center; color: #222; font-size: wem"
+      >
+        手機版整理中<br />Mobile version is under construction
       </div>
       <canvas id="grass-canvas"></canvas>
       <div
