--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -37,10 +37,7 @@
   <body>
     <!-- 草-草=草 -->
     <div id="grass-mask" style="display: none">
-      <div
-        id="grass-tip"
-        style="margin-top: 1em; text-align: center; color: #222; font-size: wem"
-      >
+      <div id="grass-tip">
         手機版整理中<br />Mobile version is under construction
       </div>
       <canvas id="grass-canvas"></canvas>
