--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -38,7 +38,7 @@
     <!-- 草-草=草 -->
     <div id="grass-mask" style="display: none">
       <div id="grass-tip">
-        手機版整理中<br />Mobile version is under construction<br />
+        手機版整理中<br />Mobile version is under construction<br /><br />
         請移步至桌機做使用<br />
         Please use desktop version
       </div>
