--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -38,8 +38,9 @@
     <!-- 草-草=草 -->
     <div id="grass-mask" style="display: none">
       <div id="grass-tip">
-        手機版整理中<br />Mobile version is under construction<br /><br />
-        請移步至桌機做使用<br />
+        手機版建置中，敬請見諒<br />
+        Mobile version under construction<br /><br />
+        請改用桌機瀏覽<br />
         Please use desktop version
       </div>
       <canvas id="grass-canvas"></canvas>
