fix: update mobile version notice with improved styling and text transformations for better visibility

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -38,10 +38,18 @@
     <!-- 草-草=草 -->
     <div id="grass-mask" style="display: none">
       <div id="grass-tip">
-        手機版建置中，敬請見諒<br />
+        <span
+          style="transform: translate(-50%, -50%) rotate(-5deg) skewX(-9deg)"
+        >
+          手機版建置中，敬請見諒<br
+        /></span>
         Mobile version under construction<br /><br />
-        請改用桌機瀏覽<br />
-        Please use desktop version
+        <span
+          style="transform: translate(-50%, -50%) rotate(2deg) skewX(-4deg)"
+        >
+          請改用桌機瀏覽<br />
+          Please use desktop version</span
+        >
       </div>
       <canvas id="grass-canvas"></canvas>
       <div
