fix: update desktop version message for clarity and improved user guidance

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -48,7 +48,7 @@
           style="transform: translate(-50%, -50%) rotate(2deg) skewX(-4deg)"
         >
           請改用桌機瀏覽<br />
-          Please use the desktop version instead</span
+          Try using a desktop browser.</span
         >
       </div>
       <canvas id="grass-canvas"></canvas>
