Refactor code structure for improved readability and maintainability

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -888,7 +888,7 @@
                           border-bottom: 1px solid aliceblue;
                         "
                       >
-                        <span class="label">攤商編號 Booth Number</span><br />
+                        <span class="label">攤位編號 Booth Number</span><br />
                         <div style="vertical-align: middle; font-size: 2.7rem">
                           <span
                             style="
@@ -2142,14 +2142,15 @@
                   <span class="faq-number">1</span>
                 </td>
                 <td>
-                  <span class="labelAQ">Q: 我國籍填錯該怎麼辦？</span><br />
+                  <span class="labelAQ">Q: 如何確認是否付款成功？</span><br />
                   <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    A: 請於您的攤商管理右上角✎符號做修改
+                    A:
+                    完成付款後，系統會自動寄出付款確認信至您填寫的信箱。團隊將於指定時間統一更新「攤商管理頁面」中的核帳狀態。
                   </span>
                 </td>
               </tr>
@@ -2159,8 +2160,7 @@
                   <span class="faq-number">2</span>
                 </td>
                 <td>
-                  <span class="labelAQ"
-                    >Q: 我顯示的攤種非我報名時填入的攤種？ </span
+                  <span class="labelAQ">Q: 沒有收到付款確認信怎麼辦？</span
                   ><br />
                   <div
                     style="
@@ -2169,7 +2169,7 @@
                     "
                   >
                     A:
-                    您原先在表單中選擇的攤位類型，經由草率季工作團隊審核後，可能與我們對該類別的定義略有不符，因此顯現為條件式錄取。不過，我們仍然非常欣賞您的創作與提案，並希望能與您在草率季中相遇。若您願意接受攤種類別的調整，我們將非常樂意為您保留參與資格。
+                    請先確認垃圾郵件夾；如仍未收到，請截圖您的付款頁面或紀錄，並來信與我們聯繫。
                   </div>
                 </td>
               </tr>
@@ -2179,7 +2179,7 @@
                   <span class="faq-number">3</span>
                 </td>
                 <td>
-                  <span class="labelAQ">Q: Shopline付款信件沒收到？ </span
+                  <span class="labelAQ">Q: 我已付款，但錄取狀態沒有更新？</span
                   ><br />
                   <div
                     style="
@@ -2188,6 +2188,7 @@
                     "
                   >
                     A:
+                    請耐心等待，團隊會於公告時間統一更新核帳狀態。如有急件或疑問，請附上付款截圖來信詢問。
                   </div>
                 </td>
               </tr>
@@ -2197,7 +2198,8 @@
                   <span class="faq-number">4</span>
                 </td>
                 <td>
-                  <span class="labelAQ">Q: 我已付款，但錄取狀態沒更新？</span
+                  <span class="labelAQ"
+                    >Q: 已付款基礎攤位費，但想加購工作證？</span
                   ><br />
                   <div
                     style="
@@ -2205,7 +2207,8 @@
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    A: 報名以及付款狀態將於 7 月 15 日對帳後更新。
+                    A:
+                    階段為唯一的加購申請與付款時段，付款完成後無法再更改選項，請務必於付款前確認。
                   </div>
                 </td>
               </tr>
@@ -2215,74 +2218,14 @@
                   <span class="faq-number">5</span>
                 </td>
                 <td>
-                  <span class="labelAQ"
-                    >Q:
-                    我從別處取得連結付款，付到非我攤種的正確金額，該怎麼辦？</span
-                  ><br />
+                  <span class="labelAQ">Q: 是否有開發票或收據？</span><br />
                   <div
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    A: :(
-                  </div>
-                </td>
-              </tr>
-              <tr></tr>
-              <tr>
-                <td class="faq-number-cell">
-                  <span class="faq-number">6</span>
-                </td>
-                <td>
-                  <span class="labelAQ"
-                    >Q: 我付款時備註的資料填錯，該怎麼辦？</span
-                  ><br />
-                  <div
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
-                    A: 請來信與我們同仁做確認
-                  </div>
-                </td>
-              </tr>
-              <tr></tr>
-              <tr>
-                <td class="faq-number-cell">
-                  <span class="faq-number">7</span>
-                </td>
-                <td>
-                  <span class="labelAQ"
-                    >Q: 我已付款基礎攤位費，但後續想加購工作證？ </span
-                  ><br />
-                  <div
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
-                    A:
-                  </div>
-                </td>
-              </tr>
-              <tr></tr>
-              <tr>
-                <td class="faq-number-cell">
-                  <span class="faq-number">8</span>
-                </td>
-                <td>
-                  <span class="labelAQ"
-                    >Q: 我可以不可以和別人合攤或和其他攤位排在一起 </span
-                  ><br />
-                  <div
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
-                    A:
+                    A: 網站自動開立電子發票，請確認報名時所填Email。
                   </div>
                 </td>
               </tr>
