fix: add English translations for FAQ section to improve user understanding

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2136,7 +2136,7 @@
         <td class="admin" id="faq" style="display: none">
           <div>
             <h3>FAQ</h3>
-            <table width="100%" class="faqtable">
+            <table class="faqtable" width="100%">
               <tr>
                 <td class="faq-number-cell">
                   <span class="faq-number">1</span>
@@ -2153,8 +2153,23 @@
                     完成付款後，系統會自動寄出付款確認信至您填寫的信箱。團隊將於指定時間統一更新「攤商管理頁面」中的核帳狀態。
                   </span>
                 </td>
+                <td>
+                  <span class="labelAQ"
+                    >Q: How do I confirm if my payment was successful?</span
+                  ><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                    A: After completing payment, a confirmation email will be
+                    sent to your registered email. The team will update the
+                    payment status on the "Dashboard" at the specified time.
+                  </span>
+                </td>
               </tr>
-              <tr></tr>
+              <!-- 2 -->
               <tr>
                 <td class="faq-number-cell">
                   <span class="faq-number">2</span>
@@ -2162,7 +2177,7 @@
                 <td>
                   <span class="labelAQ">Q: 沒有收到付款確認信怎麼辦？</span
                   ><br />
-                  <div
+                  <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
@@ -2170,10 +2185,26 @@
                   >
                     A:
                     請先確認垃圾郵件夾；如仍未收到，請截圖您的付款頁面或紀錄，並來信與我們聯繫。
-                  </div>
+                  </span>
+                </td>
+                <td>
+                  <span class="labelAQ"
+                    >Q: What if I didn't receive the payment confirmation
+                    email?</span
+                  ><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                    A: Please check your spam folder first. If you still haven't
+                    received it, take a screenshot of your payment page or
+                    record and contact us.
+                  </span>
                 </td>
               </tr>
-              <tr></tr>
+              <!-- 3 -->
               <tr>
                 <td class="faq-number-cell">
                   <span class="faq-number">3</span>
@@ -2181,7 +2212,7 @@
                 <td>
                   <span class="labelAQ">Q: 我已付款，但錄取狀態沒有更新？</span
                   ><br />
-                  <div
+                  <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
@@ -2189,10 +2220,26 @@
                   >
                     A:
                     請耐心等待，團隊會於公告時間統一更新核帳狀態。如有急件或疑問，請附上付款截圖來信詢問。
-                  </div>
+                  </span>
+                </td>
+                <td>
+                  <span class="labelAQ"
+                    >Q: I have paid, but my admission status hasn't been
+                    updated?</span
+                  ><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                    A: Please be patient. The team will update the payment
+                    status at the announced time. For urgent cases or questions,
+                    please email us with your payment screenshot.
+                  </span>
                 </td>
               </tr>
-              <tr></tr>
+              <!-- 4 -->
               <tr>
                 <td class="faq-number-cell">
                   <span class="faq-number">4</span>
@@ -2201,7 +2248,7 @@
                   <span class="labelAQ"
                     >Q: 已付款基礎攤位費，但想加購工作證？</span
                   ><br />
-                  <div
+                  <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
@@ -2209,24 +2256,54 @@
                   >
                     A:
                     階段為唯一的加購申請與付款時段，付款完成後無法再更改選項，請務必於付款前確認。
-                  </div>
+                  </span>
+                </td>
+                <td>
+                  <span class="labelAQ"
+                    >Q: I have paid the basic booth fee, but want to add an
+                    extra badge?</span
+                  ><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                    A: The current phase is the only period for add-on
+                    applications and payments. Once payment is completed,
+                    options cannot be changed. Please confirm before paying.
+                  </span>
                 </td>
               </tr>
-              <tr></tr>
+              <!-- 5 -->
               <tr>
                 <td class="faq-number-cell">
                   <span class="faq-number">5</span>
                 </td>
                 <td>
                   <span class="labelAQ">Q: 是否有開發票或收據？</span><br />
-                  <div
+                  <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
                     A: 網站自動開立電子發票，請確認報名時所填Email。
-                  </div>
+                  </span>
+                </td>
+                <td>
+                  <span class="labelAQ"
+                    >Q: Will I receive an invoice or receipt?</span
+                  ><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                    A: The website automatically issues an e-invoice. Please
+                    make sure your email is correct when registering.
+                  </span>
                 </td>
               </tr>
             </table>
