--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2135,7 +2135,7 @@
         </td>
         <td class="admin" id="faq" style="display: none">
           <div>
-            <h3>FAQ</h3>
+            <h3 style="z-index: 99">FAQ</h3>
             <table class="faqtable" width="100%">
               <tr>
                 <td class="faq-number-cell">
