fix: update FAQ responses to clarify Exhibitor Status terminology

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2165,7 +2165,7 @@
                   >
                     A: After completing payment, a confirmation email will be
                     sent to your registered email. The team will update the
-                    payment status on the "Dashboard" at the specified time.
+                    Exhibitor Status on the "Dashboard" at the specified time.
                   </span>
                 </td>
               </tr>
@@ -2224,7 +2224,7 @@
                 </td>
                 <td>
                   <span class="labelAQ"
-                    >Q: I have paid, but my admission status hasn't been
+                    >Q: I have paid, but my Exhibitor Status hasn't been
                     updated?</span
                   ><br />
                   <span
@@ -2233,9 +2233,9 @@
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    A: Please be patient. The team will update the payment
-                    status at the announced time. For urgent cases or questions,
-                    please email us with your payment screenshot.
+                    A: Please be patient. The TPABF team will update the
+                    Exhibitor Status at the announced time. For urgent cases or
+                    questions, please email us with your payment screenshot.
                   </span>
                 </td>
               </tr>
@@ -2261,7 +2261,7 @@
                 <td>
                   <span class="labelAQ"
                     >Q: I have paid the basic booth fee, but want to add an
-                    extra badge?</span
+                    extra pass?</span
                   ><br />
                   <span
                     style="
