fix: update FAQ section to remove right border and improve layout

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2141,7 +2141,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">1</span>
                 </td>
-                <td>
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 如何確認是否付款成功？</span><br />
                   <span
                     style="
@@ -2153,7 +2153,7 @@
                     完成付款後，系統會自動寄出付款確認信至您填寫的信箱。團隊將於指定時間統一更新「攤商管理頁面」中的核帳狀態。
                   </span>
                 </td>
-                <td>
+                <td class="QA-section">
                   <span class="labelAQ"
                     >Q: How do I confirm if my payment was successful?</span
                   ><br />
@@ -2174,7 +2174,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">2</span>
                 </td>
-                <td>
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 沒有收到付款確認信怎麼辦？</span
                   ><br />
                   <span
@@ -2187,7 +2187,7 @@
                     請先確認垃圾郵件夾；如仍未收到，請截圖您的付款頁面或紀錄，並來信與我們聯繫。
                   </span>
                 </td>
-                <td>
+                <td class="QA-section">
                   <span class="labelAQ"
                     >Q: What if I didn't receive the payment confirmation
                     email?</span
@@ -2209,7 +2209,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">3</span>
                 </td>
-                <td>
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 我已付款，但錄取狀態沒有更新？</span
                   ><br />
                   <span
@@ -2222,7 +2222,7 @@
                     請耐心等待，團隊會於公告時間統一更新核帳狀態。如有急件或疑問，請附上付款截圖來信詢問。
                   </span>
                 </td>
-                <td>
+                <td class="QA-section">
                   <span class="labelAQ"
                     >Q: I have paid, but my Exhibitor Status hasn't been
                     updated?</span
@@ -2244,7 +2244,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">4</span>
                 </td>
-                <td>
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ"
                     >Q: 已付款基礎攤位費，但想加購工作證？</span
                   ><br />
@@ -2258,7 +2258,7 @@
                     階段為唯一的加購申請與付款時段，付款完成後無法再更改選項，請務必於付款前確認。
                   </span>
                 </td>
-                <td>
+                <td class="QA-section">
                   <span class="labelAQ"
                     >Q: I have paid the basic booth fee, but want to add an
                     extra pass?</span
@@ -2277,10 +2277,10 @@
               </tr>
               <!-- 5 -->
               <tr>
-                <td class="faq-number-cell">
+                <td class="faq-number-cell" style="border-right: none">
                   <span class="faq-number">5</span>
                 </td>
-                <td>
+                <td class="QA-section">
                   <span class="labelAQ">Q: 是否有開發票或收據？</span><br />
                   <span
                     style="
@@ -2291,7 +2291,7 @@
                     A: 網站自動開立電子發票，請確認報名時所填Email。
                   </span>
                 </td>
-                <td>
+                <td class="QA-section">
                   <span class="labelAQ"
                     >Q: Will I receive an invoice or receipt?</span
                   ><br />
