fix: enhance FAQ section with English translations and improved styling

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2154,15 +2154,10 @@
                   </span>
                 </td>
                 <td class="QA-section">
-                  <span class="labelAQ"
+                  <span class="labelAQ en"
                     >Q: How do I confirm if my payment was successful?</span
                   ><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
+                  <span class="faq-answer-en">
                     A: After completing payment, a confirmation email will be
                     sent to your registered email. The team will update the
                     Exhibitor Status on the "Dashboard" at the specified time.
@@ -2188,16 +2183,11 @@
                   </span>
                 </td>
                 <td class="QA-section">
-                  <span class="labelAQ"
+                  <span class="labelAQ en"
                     >Q: What if I didn't receive the payment confirmation
                     email?</span
                   ><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
+                  <span class="faq-answer-en">
                     A: Please check your spam folder first. If you still haven't
                     received it, take a screenshot of your payment page or
                     record and contact us.
@@ -2223,16 +2213,11 @@
                   </span>
                 </td>
                 <td class="QA-section">
-                  <span class="labelAQ"
+                  <span class="labelAQ en"
                     >Q: I have paid, but my Exhibitor Status hasn't been
                     updated?</span
                   ><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
+                  <span class="faq-answer-en">
                     A: Please be patient. The TPABF team will update the
                     Exhibitor Status at the announced time. For urgent cases or
                     questions, please email us with your payment screenshot.
@@ -2259,16 +2244,11 @@
                   </span>
                 </td>
                 <td class="QA-section">
-                  <span class="labelAQ"
+                  <span class="labelAQ en"
                     >Q: I have paid the basic booth fee, but want to add an
                     extra pass?</span
                   ><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
+                  <span class="faq-answer-en">
                     A: The current phase is the only period for add-on
                     applications and payments. Once payment is completed,
                     options cannot be changed. Please confirm before paying.
@@ -2277,10 +2257,10 @@
               </tr>
               <!-- 5 -->
               <tr>
-                <td class="faq-number-cell" style="border-right: none">
+                <td class="faq-number-cell">
                   <span class="faq-number">5</span>
                 </td>
-                <td class="QA-section">
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 是否有開發票或收據？</span><br />
                   <span
                     style="
@@ -2292,15 +2272,10 @@
                   </span>
                 </td>
                 <td class="QA-section">
-                  <span class="labelAQ"
+                  <span class="labelAQ en"
                     >Q: Will I receive an invoice or receipt?</span
                   ><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
+                  <span class="faq-answer-en">
                     A: The website automatically issues an e-invoice. Please
                     make sure your email is correct when registering.
                   </span>
