fix: update exhibition status terminology for clarity in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -41,6 +41,15 @@
         <span
           style="transform: translate(-50%, -50%) rotate(-5deg) skewX(-9deg)"
         >
+          您已獲選參展 2025 草率季 Taipei Art Book Fair<br /><br />
+          You have been selected to exhibit at the 2025 Taipei Art Book
+          Fair.</span
+        >
+      </div>
+      <!-- <div id="grass-tip">
+        <span
+          style="transform: translate(-50%, -50%) rotate(-5deg) skewX(-9deg)"
+        >
           手機版未開放<br
         /></span>
         Mobile version is currently under renovation<br /><br />
@@ -50,7 +59,7 @@
           請改用桌機瀏覽<br />
           Try using a desktop browser.</span
         >
-      </div>
+      </div> -->
       <canvas id="grass-canvas"></canvas>
       <div
         id="grass-cursor"
@@ -159,26 +168,25 @@
         </td>
 
         <!-- Middle Column -->
-
         <td class="mid">
           <div class="scroll-inner">
             <table width="100%">
               <tr>
-                <td colspan="1" style="position: relative; width: 65%">
+                <td colspan="1" style="position: relative; width: 55%">
                   <span class="label">報名編號 Application Number</span><br />
                   <span style="font-size: 3rem" id="application-number"
                     >25-LB001</span
                   >
                 </td>
-                <td style="width: 35%">
+                <td style="width: 45%">
                   <span class="label">錄取結果 Application Result</span><br />
                   <div style="vertical-align: middle; font-size: 2.7rem">
                     <span
                       style="
                         font-size: 2rem;
-                        line-height: 1rem;
                         font-weight: bold;
                         padding: 0px 10px 0px 10px;
+                        line-height: 3rem;
                       "
                       id="application-result"
                       >錄取</span
