--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -8,7 +8,7 @@
       content="default-src 'self'; 
          script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
          style-src 'self' 'unsafe-inline'; 
-         connect-src https://www.google-analytics.com https://script.google.com;
+         connect-src https://www.google-analytics.com https://script.google.com https://script.googleusercontent.com;
          frame-src https://www.google.com;"
     />
     <title>Forgot Password - 草率季Taipei Art Book Fair</title>
