fix: adjust line height for application result and add tooltip text ID for clarity

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -177,7 +177,7 @@
                         font-size: 2rem;
                         font-weight: bold;
                         padding: 0px 10px 0px 10px;
-                        line-height: 3rem;
+                        line-height: 2rem;
                       "
                       id="application-result"
                       >錄取</span
@@ -231,7 +231,7 @@
                     title="說明"
                     id="booth-type-tooltip"
                     style="display: none"
-                    >?<span class="tooltip-text"
+                    >?<span class="tooltip-text" id="tooltip-text"
                       >您原先在表單中選擇的攤位類型，經由草率季工作團隊審核後，可能與我們對該類別的定義略有不符。不過，我們仍然非常欣賞您的創作與提案，並希望能與您在草率季中相遇。若您願意接受攤種類別的調整，我們將非常樂意為您保留參與資格。</span
                     ></span
                   ><br /><span
