fix: merge verification and password reset steps into a single process

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -252,8 +252,9 @@
             <input type="text" id="verification-code" name="verificationCode" />
           </div>
 
+          <!-- 原本的驗證按鈕已不需要，因為驗證和密碼重設合併為一個步驟 -->
           <div class="submit-box" id="verify-box" style="display: none">
-            <button id="verify-btn" type="button">
+            <button id="verify-btn" type="button" style="display: none">
               驗證驗證碼 Verify Code
             </button>
           </div>
