fix: update billing information terminology and add payment deadline notes for clarity

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1129,7 +1129,7 @@
                                   padding: 2px 6px;
                                 "
                               >
-                                付款方案 Billing Information
+                                付款方案 Payment Information
                               </td>
                             </tr>
                             <tr>
@@ -1158,6 +1158,9 @@
                                 >
                                 <br />
                                 <span for-billing1-desc>僅基礎方案</span>
+                                <div class="billing-note" id="billing-note1">
+                                  Payment Deadline: July 13
+                                </div>
                                 <div class="pay-button" id="pay1">付款 Pay</div>
                               </td>
                               <td
@@ -1188,6 +1191,9 @@
                                 <span for-billing2-desc
                                   >適合有輪班擺攤需求之攤主</span
                                 >
+                                <div class="billing-note" id="billing-note2">
+                                  Payment Deadline: July 13
+                                </div>
                                 <div class="pay-button" id="pay2">付款 Pay</div>
                               </td>
                             </tr>
