fix: update runner-up terminology to 'waitlisted' for clarity

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1615,12 +1615,12 @@
                     <tr>
                       <td>
                         <span class="rotated" id="schedule-runnerup"
-                          >備取名單通知<br />Runner-up Notification</span
+                          >備取名單通知<br />Waitlisted Notification</span
                         >
                       </td>
                       <td>
                         <span class="rotated" id="schedule-runnerup-payment"
-                          >備取付款截止<br />Runner-up Payment Deadline</span
+                          >備取付款截止<br />Waitlisted Payment Deadline</span
                         >
                       </td>
                       <td>
