fix: remove obsolete verification code input and button due to process merge

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -245,6 +245,7 @@
             </button>
           </div>
 
+          <!-- 原本的驗證碼輸入區域已註解，因為現在在動態生成的表單中處理
           <div class="input-box" id="code-box" style="display: none">
             <label for="verificationCode"
               >輸入驗證碼 Enter verification code</label
@@ -252,12 +253,12 @@
             <input type="text" id="verification-code" name="verificationCode" />
           </div>
 
-          <!-- 原本的驗證按鈕已不需要，因為驗證和密碼重設合併為一個步驟 -->
           <div class="submit-box" id="verify-box" style="display: none">
             <button id="verify-btn" type="button" style="display: none">
               驗證驗證碼 Verify Code
             </button>
           </div>
+          -->
         </form>
       </div>
     </div>
