fix: adjust font size for application result display and update form link

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -171,7 +171,7 @@
                 </td>
                 <td style="width: 45%">
                   <span class="label">錄取結果 Application Result</span><br />
-                  <div style="vertical-align: middle; font-size: 2.7rem">
+                  <div style="vertical-align: middle; font-size: 2rem">
                     <span
                       style="
                         font-size: 2rem;
@@ -1313,7 +1313,7 @@
                     </div>
                     <br />
                     <a
-                      href="https://forms.gle/hVu54wUfqqUMRxfG8"
+                      href="https://forms.gle/fP76GbEVv4F33Fvo6"
                       target="_blank"
                       >填寫表單</a
                     >
