--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -171,7 +171,10 @@
                 </td>
                 <td style="width: 45%">
                   <span class="label">錄取結果 Application Result</span><br />
-                  <div style="vertical-align: middle; font-size: 2rem">
+                  <div
+                    id="application-result-wrapper"
+                    style="vertical-align: middle; font-size: 2.7rem"
+                  >
                     <span
                       style="
                         font-size: 2rem;
