--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -233,7 +233,7 @@
                     class="booth-change"
                     title="說明"
                     id="booth-type-tooltip"
-                    style="display: none"
+                    style="display: none; z-index: 999"
                     >?<span class="tooltip-text" id="tooltip-text"
                       >您原先在表單中選擇的攤位類型，經由草率季工作團隊審核後，可能與我們對該類別的定義略有不符。不過，我們仍然非常欣賞您的創作與提案，並希望能與您在草率季中相遇。若您願意接受攤種類別的調整，我們將非常樂意為您保留參與資格。</span
                     ></span
@@ -2158,7 +2158,7 @@
                     "
                   >
                     A:
-                    完成付款後，系統會自動寄出付款確認信至您填寫的信箱。團隊將於指定時間統一更新「攤商管理頁面」中的核帳狀態。
+                    完成付款後，系統會自動寄出付款確認信至您填寫的信箱。團隊將於指定時間統一更新「攤商管理」頁面中的核帳狀態。
                   </span>
                 </td>
                 <td class="QA-section">
