fix: update font size for application result display and remove unnecessary text

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1235,7 +1235,7 @@
                 </td>
               </tr>
               <tr id="negative-letter" style="display: none">
-                <td colspan="3" style="border-top: none">
+                <td colspan="3">
                   感謝您對本次徵件／申請活動的關注與投入。經過審慎評選，本屆草率季，我們收到了900多海內外具創意與潛力的申請作品／計畫。經評審團綜合討論後，遺憾地通知您，此次您所提交的申請未列入最終入選名單。<br />
                   我們非常感謝您願意分享您的創作／計畫，也十分肯定您在其中展現出的努力與思考。誠摯地希望未來仍有機會與您合作或再次收到您的申請。也歡迎您參與草率季的其他活動，或是持續關注我們的網站與社群媒體，了解更多最新消息。<br />
                   祝一切順利，創作茂盛。<br /><br />
@@ -1266,7 +1266,7 @@
                 </td>
               </tr>
               <tr id="runnerup-letter" style="display: none">
-                <td colspan="3" style="border-top: none">
+                <td colspan="3">
                   感謝您對本次徵件／申請活動的關注與投入。<br /><br />
                   經過審慎評選，本屆草率季，我們收到了900多封來自海內外具創意與潛力的申請作品／計畫。<br />
                   經評審團綜合討論後，您的申請目前列為備取，我們將於<u>7/16日</u>公布備取錄取、繳費通知。<br />
