fix: update back link to point to the correct homepage

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -261,7 +261,7 @@
       </div>
     </div>
 
-    <a href="index-logingtryout.html"><div class="back">回主頁 Back</div></a>
+    <a href="index.html"><div class="back">回主頁 Back</div></a>
 
     <script>
       const sendVerificationButton = document.getElementById(
