--- a/login.html
+++ b/login.html
@@ -259,7 +259,7 @@
         />
       </div>
     </div>
-    <a href="index-logingtryout.html"><div class="back">回主頁 Back</div></a>
+    <a href="index.html"><div class="back">回主頁 Back</div></a>
     <script src="js/cookie.js"></script>
     <script src="js/login.js"></script>
     <script>
