fix: add hidden exhibitor login button to the index page

--- a/index.html
+++ b/index.html
@@ -455,6 +455,10 @@ font in use: Poppins, PicNic, and Inclusive Sans
       </div>
     </div>
 
+    <a href="login.html" style="display: none"
+      ><div class="login-btn">攤主登入｜Exhibitor Login</div></a
+    >
+
     <script src="js/infolog.js"></script>
     <script src="js/script.js"></script>
   </body>
