--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2149,7 +2149,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">1</span>
                 </td>
-                <td class="QA-section">
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 如何確認是否付款成功？</span><br />
                   <span
                     style="
@@ -2160,6 +2160,8 @@
                     A:
                     完成付款後，系統會自動寄出付款確認信至您填寫的信箱。團隊將於指定時間統一更新「攤商管理」頁面中的核帳狀態。
                   </span>
+                </td>
+                <td class="QA-section">
                   <span class="labelAQ en"
                     >Q: How do I confirm if my payment was successful?</span
                   ><br />
@@ -2175,7 +2177,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">2</span>
                 </td>
-                <td class="QA-section">
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 沒有收到付款確認信怎麼辦？</span
                   ><br />
                   <span
@@ -2187,6 +2189,8 @@
                     A:
                     請先確認垃圾郵件夾；如仍未收到，請截圖您的付款頁面或紀錄，並來信與我們聯繫。
                   </span>
+                </td>
+                <td class="QA-section">
                   <span class="labelAQ en"
                     >Q: What if I didn't receive the payment confirmation
                     email?</span
@@ -2203,7 +2207,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">3</span>
                 </td>
-                <td class="QA-section">
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 我已付款，但錄取狀態沒有更新？</span
                   ><br />
                   <span
@@ -2215,6 +2219,8 @@
                     A:
                     請耐心等待，團隊會於公告時間統一更新核帳狀態。如有急件或疑問，請附上付款截圖來信詢問。
                   </span>
+                </td>
+                <td class="QA-section">
                   <span class="labelAQ en"
                     >Q: I have paid, but my Exhibitor Status hasn't been
                     updated?</span
@@ -2231,7 +2237,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">4</span>
                 </td>
-                <td class="QA-section">
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ"
                     >Q: 已付款基礎攤位費，但想加購工作證？</span
                   ><br />
@@ -2244,6 +2250,8 @@
                     A:
                     階段為唯一的加購申請與付款時段，付款完成後無法再更改選項，請務必於付款前確認。
                   </span>
+                </td>
+                <td class="QA-section">
                   <span class="labelAQ en"
                     >Q: I have paid the basic booth fee, but want to add an
                     extra pass?</span
@@ -2260,7 +2268,7 @@
                 <td class="faq-number-cell">
                   <span class="faq-number">5</span>
                 </td>
-                <td class="QA-section">
+                <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 是否有開發票或收據？</span><br />
                   <span
                     style="
@@ -2270,6 +2278,8 @@
                   >
                     A: 網站自動開立電子發票，請確認報名時所填Email。
                   </span>
+                </td>
+                <td class="QA-section">
                   <span class="labelAQ en"
                     >Q: Will I receive an invoice or receipt?</span
                   ><br />
