fix: simplify FAQ question wording for clarity

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2253,8 +2253,8 @@
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: I have paid the basic booth fee, but want to add an
-                    extra pass?</span
+                    >Q: I have paid the basic fee, but want to add an extra
+                    pass?</span
                   ><br />
                   <span class="faq-answer-en">
                     A: The current phase is the only period for add-on
