fix: remove inline style from exhibitor login link for improved visibility

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ font in use: Poppins, PicNic, and Inclusive Sans
       </div>
     </div>
 
-    <a href="login.html" style="display: none"
+    <a href="login.html"
       ><div class="login-btn">攤主登入｜Exhibitor Login</div></a
     >
 
